fixed nav elements on mobile

--- a/src/styl/responsive/laptop.styl
+++ b/src/styl/responsive/laptop.styl
@@ -19,3 +19,10 @@
   space-maker($margin-micro, $margin-tiny, $margin-small, $margin-basic, $margin-mid, $margin-large)
 
   font-sizes($font-size-basic, false, $font-size-large, $font-size-mid, $font-size-small)
+
+  // ******************************************************
+
+  // HEADER
+
+  #site-title
+    margin-top: $margin-tiny
