--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -49,10 +49,19 @@ font-sizes($font-size-basic, false, $font-size-large, $font-size-mid, $font-size
 
 #nav-about
   order: 1
+  position: fixed
+  top: 0
+  left: 0
+  z-index: 200
 
 #nav-stockists
   order: 2
   text-align: right
+  position: fixed
+  top: 0
+  right: 0
+  z-index: 200
 
 #site-title
   order: 3
+  margin-top: $margin-basic
