--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -22,3 +22,10 @@
 
   .desktop-only
     display: initial !important
+
+  // ******************************************************
+
+  // HEADER
+
+  #site-title
+    margin-top: $margin-tiny
